applications/configmaps/deployment-configmap-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configmap-web
  name: configmap-web
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: configmap-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: configmap-web
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        volumeMounts:
        - name: index-file
          mountPath: /usr/share/nginx/html/
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
        - name: index-file
          configMap:
            name: nginx
            items:
            - key: index.html
              path: index.html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
