applications/configmaps/service-configmap-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: configmap-web
  name: configmap-web
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: configmap-web
  sessionAffinity: None
  type: ClusterIP
