applications/configmaps/ingress-configmap-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-configmap-web
spec:
  rules:
  - host: configmap-web.k3sdemo.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: configmap-web
            port:
              number: 80
